src/app/components/util/required-time-display/required-time-display.component.scss
.container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;

  h3 {
    margin: 0;
  }
}

.singleRow {
  flex-direction: row;
  align-items: baseline;

  .content {
    margin-left: 0.4vw;
  }
}

.content {
  display: flex;
  flex-direction: row;
  align-items: baseline;
  align-self: center;

  mat-form-field {
    width: 2vw;

    input {
      text-align: right;
    }
  }

  .unit {
    margin-left: 0.5vw;
    margin-bottom: 0;
  }
}

